<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_18dp"
    tools:context=".ui.detais.CharacterDetailsFragment">

    <TextView
        android:id="@+id/tvName"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imgCharacter"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/space_20dp"
        android:contentDescription="@string/actor_image"
        android:src="@drawable/no_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20dp"
        android:elevation="@dimen/space_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgCharacter">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_18dp">

            <TextView
                android:id="@+id/tvInformation"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvActorNameLabel"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_20dp"
                android:padding="5dp"
                android:text="@string/actor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvInformation" />


            <TextView
                android:id="@+id/tvActorName"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/actor_name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvActorNameLabel" />


            <TextView
                android:id="@+id/tvHouseLabel"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/house"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvActorNameLabel" />

            <TextView
                android:id="@+id/tvHouse"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/house_name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvHouseLabel" />

            <TextView
                android:id="@+id/tvStatusLabel"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHouseLabel" />


            <TextView
                android:id="@+id/tvStatus"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/alive"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvStatusLabel" />


            <TextView
                android:id="@+id/tvSpeciesLabel"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/species"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvStatusLabel" />

            <TextView
                android:id="@+id/tvSpecies"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/species_name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvSpeciesLabel" />


            <TextView
                android:id="@+id/tvGenderLabel"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSpeciesLabel" />

            <TextView
                android:id="@+id/tvGender"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/gender_name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvGenderLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>