<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:clickable="true"
    android:elevation="@dimen/space_20dp"
    android:focusable="true"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_18dp">

        <ImageView
            android:id="@+id/imgCharacter"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/actor_image"
            android:src="@drawable/no_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_20dp"
            android:text="@string/name"
            app:layout_constraintStart_toEndOf="@id/imgCharacter"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvActorName"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_20dp"
            android:text="@string/actor_name"
            app:layout_constraintStart_toEndOf="@id/imgCharacter"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvHouseName"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_20dp"
            android:text="@string/house_name"
            app:layout_constraintStart_toEndOf="@id/imgCharacter"
            app:layout_constraintTop_toBottomOf="@id/tvActorName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
